# Atlas

./: .clang-format  .gitignore  .gitmodules  Atlas.qbs  CMakeLists.txt  Readme.md  vcpkg.json
Editor/: Editor.qbs  Main.cpp  (+4 more)
Engine/: CMakeLists.txt  Engine.qbs
Engine/Allocators/: Allocator.h  FreelistAllocator.cpp  FreelistAllocator.h  LinearAllocator.cpp  LinearAllocator.h  PoolAllocator.cpp  PoolAllocator.h  ProxyAllocator.cpp  ProxyAllocator.h  StackAllocator.cpp  StackAllocator.h
Engine/Animation/: CMakeLists.txt
Engine/Animation/Private/: AnimationSystem.cpp
Engine/Animation/Public/Animation/: AnimationSystem.h
Engine/Assets/: Asset.cpp  Asset.h  CMakeLists.txt  Geometry.cpp  Geometry.h  Light.cpp  Light.h  Material.cpp  Material.h  ParticleEffect.cpp  ParticleEffect.h  Script.cpp  Script.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Types.cpp  Types.h
Engine/Assets/Private/: Asset.cpp  AssetManager.cpp  Types.cpp
Engine/Assets/Public/Assets/: Asset.h  AssetManager.h
Engine/Camera/: CMakeLists.txt
Engine/Camera/Private/: Camera.cpp
Engine/Components/: Camera.cpp  Camera.h  Common.h  Component.cpp  Component.h  LightComponent.h  MaterialComponent.cpp  MaterialComponent.h  MeshComponent.cpp  MeshComponent.h  ParticleEffectComponent.h  TransformComponent.cpp  TransformComponent.h  Types.h
Engine/Core/: AtlasCore.h  Base.h  CMakeLists.txt  CompileMurmur.h  Debug.h  Delegate.h  DynFreeList.h  Engine.cpp  Engine.h  FreeList.h  Handle.h  HandledStorage.h  Hash.h  Logger.h  NonCopyable.h  PackUtils.h  SerializationArchives.h  SimpleMeshVertex.h  Spinlock.h  Streams.h  StringHash.h  Stringhash.cpp  Types.h
Engine/Core/Private/: Logger.cpp  MemoryManager.cpp  ReflectHq.cpp  SimpleMeshVertex.cpp  TransformComponent.cpp
Engine/Core/Public/Core/: Component.h  Debug.h  Logger.h  MemoryManager.h  SimpleMeshVertex.h  TransformComponent.h
Engine/DebugDraw/: CMakeLists.txt
Engine/DebugDraw/Private/: DebugDraw.cpp
Engine/DebugDraw/Public/DebugDraw/: DebugDraw.h
Engine/Ecs/: CMakeLists.txt
Engine/Ecs/Private/: ECSManager.cpp
Engine/Ecs/Public/Ecs/: ECSManager.h
Engine/Engine/: CMakeLists.txt
Engine/Engine/Private/: Engine.cpp
Engine/Engine/Public/Engine/: Engine.h
Engine/Geometry/: CMakeLists.txt
Engine/Geometry/Private/: Geometry.cpp
Engine/Geometry/Public/Geometry/: Geometry.h  MeshComponent.h
Engine/Input/: CMakeLists.txt
Engine/Input/Private/: InputManager.cpp
Engine/Input/Public/Input/: InputManager.h
Engine/Lights/: CMakeLists.txt
Engine/Lights/Private/: Light.cpp
Engine/Lights/Public/Lights/: Light.h  LightComponent.h
Engine/Managers/: AssetManager.cpp  AssetManager.h  ECSManager.cpp  ECSManager.h  InputManager.cpp  InputManager.h  JobManager.cpp  JobManager.h  LogManager.cpp  LogManager.h  PluginManager.cpp  PluginManager.h  ProfilingManager.cpp  ProfilingManager.h  ResourceManager.cpp  ResourceManager.h  SceneManager.cpp  SceneManager.h  UIManager.cpp  UIManager.h
Engine/Materials/: CMakeLists.txt
Engine/Materials/Private/: Material.cpp  MaterialComponent.cpp  Shader.cpp  Texture.cpp
Engine/Materials/Public/Materials/: Material.h  MaterialComponent.h  Shader.h  Texture.h
Engine/Math/: BoundingBox.cpp  BoundingBox.h  BoundingBox.inl  BoundingSphere.cpp  BoundingSphere.h  BoundingSphere.inl  Frustum.cpp  Frustum.h  MathUtil.cpp  MathUtil.h  MathUtil.inl  MathUtilNeon.inl  MathUtilNeon64.inl  MathUtilSSE.inl  Matrix.cpp  Matrix.h  Matrix.inl  Plane.cpp  Plane.h  Plane.inl  Quaternion.cpp  Quaternion.h  Quaternion.inl  Ray.cpp  Ray.h  Ray.inl  Rectangle.cpp  Rectangle.h  Transform.cpp  Transform.h  Utils.h  Vector2.cpp  Vector2.h  Vector2.inl  Vector3.cpp  Vector3.h  Vector3.inl  Vector4.cpp  Vector4.h  Vector4.inl
Engine/Nodes/: Node.cpp  Node.h  NodePath.h  NodeScript.cpp  NodeScript.h  Spatial.cpp  Spatial.h  Types.cpp  Types.h
Engine/Particles/: CMakeLists.txt
Engine/Particles/Private/: ParticleEffect.cpp  ParticleSystem.cpp
Engine/Particles/Public/Particles/: ParticleEffect.h  ParticleEffectComponent.h  ParticleSystem.h
Engine/Picking/: CMakeLists.txt
Engine/Picking/Private/: PickingSystem.cpp
Engine/Picking/Public/Picking/: PickingSystem.h
Engine/Plugins/: CMakeLists.txt
Engine/Plugins/Private/: PluginManager.cpp
Engine/Plugins/Public/Plugins/: PluginManager.h
Engine/Reflect/: ReflectHq.cpp
Engine/Reflection/: CMakeLists.txt
Engine/Reflection/Public/Reflection/: Reflection.h  Registration.h
Engine/Rendering/: CMakeLists.txt
Engine/Rendering/Private/: RenderSystem.cpp
Engine/Rendering/Public/Rendering/: RenderSystem.h
Engine/Resources/: Asset.cpp  Asset.h  Geometry.cpp  Geometry.h  Script.cpp  Script.h
Engine/SDL/: CMakeLists.txt  Main.cpp  MainWindow.cpp  MainWindow.h  SDLApp.cpp  SDLApp.h  SDLWindow.cpp  SDLWindow.h  fs_axes.bin.h  vs_axes.bin.h
Engine/SDL/Private/: SDLApp.cpp  SDLWindow.cpp
Engine/SDL/Public/SDL/: SDLApp.h  SDLWindow.h
Engine/Scripting/: CMakeLists.txt  WrenBindings.cpp  WrenBindings.h  WrenBindingsImpl.cpp  WrenBindingsImpl.h
Engine/Scripting/Private/: Script.cpp
Engine/Scripting/wren/: Assets.wren  Engine.wren  ImGui.wren  Math.wren  Scene.wren  TestNodeScript.wren  Utils.wren  Vector.wren  imgui.wren  main.wren  vector.wren
Engine/Systems/: AnimationSystem.cpp  AnimationSystem.h  ISystem.h  ParticleSystem.cpp  ParticleSystem.h  PickingSystem.cpp  PickingSystem.h  RenderSystem.cpp  RenderSystem.h
Engine/UI/: CMakeLists.txt  InfoWindow.cpp  InspectorWindow.cpp  InspectorWindow.h  UIWindow.cpp  UIWindow.h
Engine/UI/Private/: FileBrowser.cpp  ImGuiSerializer.cpp  InfoWindow.cpp  InspectorWindow.cpp  UIManager.cpp  UIWindow.cpp
Engine/UI/Public/UI/: FileBrowser.h  ImGuiSerializer.h  InfoWindow.h  InspectorWindow.h  Spinner.h  UIManager.h  UIWindow.h
Engine/Utils/: BgfxUtils.cpp  CMakeLists.txt  DebugDraw.cpp  DebugDraw.h  ImGuiSerializer.cpp  ImGuiSerializer.h  PrintContainers.h  TypeTraits.h
Engine/Utils/Private/: BgfxUtils.cpp
Playground/: CMakeLists.txt
Playground/TestPlayer/: CMakeLists.txt  Main.cpp  MainWindow.cpp  MainWindow.h
(+34 files in other folders)
