cmake_minimum_required(VERSION 3.16) # for precompiled headers and unity builds

find_package(imgui CONFIG REQUIRED)
find_package(entt CONFIG REQUIRED)
find_package(rttr CONFIG REQUIRED)

add_subdirectory(Core)
add_subdirectory(Ecs)
add_subdirectory(Animation)
add_subdirectory(Assets)
add_subdirectory(Camera)
add_subdirectory(Geometry)
add_subdirectory(Input)
add_subdirectory(Lights)
add_subdirectory(Materials)
add_subdirectory(Particles)
add_subdirectory(Picking)
add_subdirectory(Plugins)
add_subdirectory(Reflection)
add_subdirectory(Rendering)
add_subdirectory(Scripting)
add_subdirectory(SDL)
add_subdirectory(UI)
add_subdirectory(Utils)
add_subdirectory(DebugDraw)
add_subdirectory(Engine)
